Avoid infinite svgs appending with innerHTML modification, implement button 11 to add a gini visual representation

--- a/PartieAjaxDOM.html
+++ b/PartieAjaxDOM.html
@@ -14,8 +14,7 @@
     <input name="text" type="text" list="country-list" id="myText1" placeholder="Code du pays" value = ""/>
     <datalist id="country-list"></datalist>
 
-    <div id="button3-render">
-    </div>
+    <div id="button3-render"></div>
 
     <input style="display: block;" name="button" type="button" id="myButton4" onClick="button4()" value="Bouton 4 (example svg)"/>
     <input style="display: block;" name="button" type="button" id="myButton5" onClick="button5()" value="Bouton 5 (clickable example svg elements)"/>
@@ -24,9 +23,15 @@
     <input style="display: block;" name="button" type="button" id="myButton8" onClick="button8()" value="Bouton 8 (mouse enter/leave map)"/>
     <input style="display: block;" name="button" type="button" id="myButton9" onClick="button9()" value="Bouton 9 (add input 3 autocomplete)"/>
     <input style="display: block;" name="button" type="button" id="myButton10" onClick="button10()" value="Bouton 10 (add button 8 currency infos)"/>
+    <input style="display: block;" name="button" type="button" id="myButton11" onClick="button11()" value="Bouton 11 (add button 8 currency infos)"/>
 
+    //TODO RESET COUNTRY HIGHLIGHTING IN BUTTON 3 WHEN CHANGING
+
+    <div id="example-svg-render"></div>
 
     <div id="country-data-render"></div>
+    <div id="country-map-render"></div>
+    <div id="country-map-legend"></div>
 
 </div>
 
