Handle button activation

--- a/PartieAjaxDOM.html
+++ b/PartieAjaxDOM.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TP DW - Guigal et Tournade</title>
     <script type="text/javascript" src="main.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -58,11 +58,11 @@
             <input name="button" type="button" id="myButton11" onClick="button11()"
                    value="Bouton 11 (display gini country level)"/>
             <input name="button" type="button" id="myButton12" onClick="button12()"
-                   value="Bouton 12 (display drinkable water countries)"/>
+                   value="Bouton 12 (display drinking water data)"/>
             <input name="button" type="button" id="myButton13" onClick="button13()"
                    value="Bouton 13 (display population density)"/>
             <input name="button" type="button" id="myButton14" onClick="button14()"
-                   value="Bouton 14 (add button 8 average temperature)"/>
+                   value="Bouton 14 (add button 8 avg temperature)"/>
             <input name="button" type="button" id="myButton15" onClick="button15()"
                    value="Bouton 15 (add button 8 country hour)"/>
         </div>
